--- a/step-01/main.yaml
+++ b/step-01/main.yaml
@@ -1,7 +1,7 @@
 # quick and dirty on a friday evening
 
-#- hosts: cumulus-nodes
-- hosts: leaf12
+- hosts: cumulus-nodes
+#- hosts: leaf12
   name: startup
   become: yes
   gather_facts: no
