--- a/ansible.cfg
+++ b/ansible.cfg
@@ -16,6 +16,6 @@ stdout_callback = yaml
 # Use the stdout_callback when running ad-hoc commands.
 # bin_ansible_callbacks = True
 interpreter_python = auto_silent
-
+force_valid_group_names = ignore
 [ssh_connection]
 ssh_args = -o ControlMaster=auto -o ControlPersist=60s -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null
