--- a/step-01/spine13.yaml
+++ b/step-01/spine13.yaml
@@ -1,16 +1,4 @@
 - set:
-    interface:
-      lo:
-        ip:
-          address:
-            172.16.100.13/32: {}
-        type: loopback
-      swp1:
-        type: swp
-      swp2:
-        type: swp
-      swp5:
-        type: swp
     router:
       bgp:
         autonomous-system: 65101
@@ -29,3 +17,20 @@
                   172.16.100.13/32: {}
             enable: on
             neighbor:
+              swp1:
+                remote-as: external
+                type: unnumbered
+              swp2:
+                remote-as: external
+                type: unnumbered
+              swp5:
+                remote-as: external
+                type: unnumbered
+    interface:
+      lo:
+        ip:
+          address:
+            172.16.100.13/32: {}
+        type: loopback
+      swp1-2,5:
+        type: swp
