--- a/step-01/leaf11.yaml
+++ b/step-01/leaf11.yaml
@@ -29,6 +29,33 @@
               swp2:
                 remote-as: external
                 type: unnumbered
+      vrf20:
+        router:
+          bgp:
+            enable: on
+            neighbor:
+              172.16.20.1:
+                remote-as: external
+                type: numbered
+        table: auto
+      vrf21:
+        router:
+          bgp:
+            enable: on
+            neighbor:
+              172.16.21.1:
+                remote-as: external
+                type: numbered
+        table: auto
+      vrf22:
+        router:
+          bgp:
+            enable: on
+            neighbor:
+              172.16.22.1:
+                remote-as: external
+                type: numbered
+        table: auto
     interface:
       lo:
         ip:
@@ -62,4 +89,5 @@
         ip:
           address:
             172.16.22.2/30: {}
+          vrf: vrf22
         vlan: 22
