--- a/step-01/extrouter11.yaml
+++ b/step-01/extrouter11.yaml
@@ -1,4 +1,63 @@
-
 - set:
+    router:
+      bgp:
+        autonomous-system: 65011
+        enable: on
+        router-id: 172.16.111.11
     system:
       hostname: extrouter11
+    vrf:
+      vrf20:
+        router:
+          bgp:
+            enable: on
+            neighbor:
+              172.16.20.2:
+                remote-as: external
+                type: numbered
+        table: auto
+      vrf21:
+        router:
+          bgp:
+            enable: on
+            neighbor:
+              172.16.21.2:
+                remote-as: external
+                type: numbered
+        table: auto
+      vrf22:
+        router:
+          bgp:
+            enable: on
+            neighbor:
+              172.16.22.2:
+                remote-as: external
+                type: numbered
+        table: auto
+    interface:
+      lo:
+        ip:
+          address:
+            172.16.111.11/32: {}
+        type: loopback
+      swp1.20-22:
+        base-interface: swp1
+        type: sub
+      swp1.20:
+        ip:
+          address:
+            172.16.20.1/30: {}
+          vrf: vrf20
+        vlan: 20
+      swp1.21:
+        ip:
+          address:
+            172.16.21.1/30: {}
+          vrf: vrf21
+        vlan: 21
+      swp1.22:
+        ip:
+          address:
+            172.16.22.1/30: {}
+          vrf: vrf22
+        vlan: 22
