--- a/step-01/spine13.yaml
+++ b/step-01/spine13.yaml
@@ -15,12 +15,20 @@
                 enable: on
                 network:
                   172.16.100.13/32: {}
+              l2vpn-evpn:
+                enable: on
             enable: on
             neighbor:
               swp1:
+                address-family:
+                  l2vpn-evpn:
+                    enable: on
                 remote-as: external
                 type: unnumbered
               swp2:
+                address-family:
+                  l2vpn-evpn:
+                    enable: on
                 remote-as: external
                 type: unnumbered
               swp5:
