--- a/step-01/spine14.yaml
+++ b/step-01/spine14.yaml
@@ -15,15 +15,26 @@
                 enable: on
                 network:
                   172.16.100.14/32: {}
+              l2vpn-evpn:
+                enable: on
             enable: on
             neighbor:
               swp1:
+                address-family:
+                  l2vpn-evpn:
+                    enable: on
                 remote-as: external
                 type: unnumbered
               swp2:
+                address-family:
+                  l2vpn-evpn:
+                    enable: on
                 remote-as: external
                 type: unnumbered
               swp5:
+                address-family:
+                  l2vpn-evpn:
+                    enable: on
                 remote-as: external
                 type: unnumbered
     interface:
