--- a/step-01/spine24.yaml
+++ b/step-01/spine24.yaml
@@ -1,16 +1,4 @@
 - set:
-    interface:
-      lo:
-        ip:
-          address:
-            172.16.100.24/32: {}
-        type: loopback
-      swp1:
-        type: swp
-      swp2:
-        type: swp
-      swp5:
-        type: swp
     router:
       bgp:
         autonomous-system: 65102
@@ -27,5 +15,33 @@
                 enable: on
                 network:
                   172.16.100.24/32: {}
+              l2vpn-evpn:
+                enable: on
             enable: on
             neighbor:
+              swp1:
+                address-family:
+                  l2vpn-evpn:
+                    enable: on
+                remote-as: external
+                type: unnumbered
+              swp2:
+                address-family:
+                  l2vpn-evpn:
+                    enable: on
+                remote-as: external
+                type: unnumbered
+              swp5:
+                address-family:
+                  l2vpn-evpn:
+                    enable: on
+                remote-as: external
+                type: unnumbered
+    interface:
+      lo:
+        ip:
+          address:
+            172.16.100.24/32: {}
+        type: loopback
+      swp1-2,5:
+        type: swp
