--- a/step-01/leaf21.yaml
+++ b/step-01/leaf21.yaml
@@ -3,53 +3,19 @@
       domain:
         br_default:
           vlan:
+            '10':
+              vni:
+                '10': {}
             '20': {}
             '21': {}
             '22': {}
-    interface:
-      lo:
-        ip:
-          address:
-            172.16.100.21/32: {}
-        type: loopback
-      swp1:
-        type: swp
-      swp2:
-        type: swp
-      swp4:
-        bridge:
-          domain:
-            br_deault: {}
-        type: swp
-      swp7:
-        bridge:
-          domain:
-            br_deault: {}
-        type: swp
-      swp8:
-        bridge:
-          domain:
-            br_default:
-              access: 10
-        type: swp
-      vlan20:
-        ip:
-          address:
-            172.16.20.5/30: {}
-        type: svi
-        vlan: 20
-      vlan21:
-        ip:
-          address:
-            172.16.21.5/30: {}
-        type: svi
-        vlan: 21
-      vlan22:
-        ip:
-          address:
-            172.16.22.5/30: {}
-        type: svi
-        vlan: 22
+    evpn:
+      enable: on
+    nve:
+      vxlan:
+        enable: on
+        source:
+          address: 172.16.100.21
     router:
       bgp:
         autonomous-system: 65121
@@ -61,5 +27,54 @@
       default:
         router:
           bgp:
-
-        
+            address-family:
+              l2vpn-evpn:
+                enable: on
+            enable: on
+            neighbor:
+              swp1:
+                address-family:
+                  l2vpn-evpn:
+                    enable: on
+                remote-as: external
+                type: unnumbered
+              swp2:
+                address-family:
+                  l2vpn-evpn:
+                    enable: on
+                remote-as: external
+                type: unnumbered
+    interface:
+      lo:
+        ip:
+          address:
+            172.16.100.21/32: {}
+        type: loopback
+      swp1-2,4,7-8:
+        type: swp
+      swp4,7:
+        bridge:
+          domain:
+            br_deault: {}
+      swp8:
+        bridge:
+          domain:
+            br_default:
+              access: 10
+      vlan20:
+        ip:
+          address:
+            172.16.20.5/30: {}
+        vlan: 20
+      vlan20-22:
+        type: svi
+      vlan21:
+        ip:
+          address:
+            172.16.21.5/30: {}
+        vlan: 21
+      vlan22:
+        ip:
+          address:
+            172.16.22.5/30: {}
+        vlan: 22
