--- a/step-01/leaf21.yaml
+++ b/step-01/leaf21.yaml
@@ -28,6 +28,10 @@
         router:
           bgp:
             address-family:
+              ipv4-unicast:
+                enable: on
+                network:
+                  172.16.100.21/32: {}
               l2vpn-evpn:
                 enable: on
             enable: on
