--- a/step-04/wan02.yaml
+++ b/step-04/wan02.yaml
@@ -4,6 +4,8 @@
         autonomous-system: 4200000000
         enable: on
         router-id: 172.16.142.2
+    system:
+      hostname: wan02
     vrf:
       default:
         router:
