--- a/step-05/leaf11.yaml
+++ b/step-05/leaf11.yaml
@@ -81,6 +81,9 @@
             172.16.100.11/32: {}
         type: loopback
       swp1-2:
+        evpn:
+          multihoming:
+            uplink: on
         type: swp
       vlan10:
         ip:
