--- a/step-07/extrouter11.yaml
+++ b/step-07/extrouter11.yaml
@@ -7,8 +7,22 @@
     system:
       hostname: extrouter11
     vrf:
-      tenant21: {}
-      tenant22: {}
+      tenant21:
+        router:
+          bgp:
+            enable: on
+            neighbor:
+              172.16.21.2:
+                remote-as: external
+                type: numbered
+      tenant22:
+        router:
+          bgp:
+            enable: on
+            neighbor:
+              172.16.22.2:
+                remote-as: external
+                type: numbered
     interface:
       lo:
         ip:
@@ -22,9 +36,11 @@
         ip:
           address:
             172.16.21.1/30: {}
+          vrf: tenant21
         vlan: 21
       swp1.22:
         ip:
           address:
             172.16.22.1/30: {}
+          vrf: tenant22
         vlan: 22
