--- a/step-07/leaf11.yaml
+++ b/step-07/leaf11.yaml
@@ -103,6 +103,9 @@
             address-family:
               ipv4-unicast:
                 enable: on
+                redistribute:
+                  connected:
+                    enable: on
                 route-export:
                   to-evpn:
                     enable: on
